--- a/index.html
+++ b/index.html
@@ -12,25 +12,24 @@
     <script type="application/javascript" src="assets/js/resources.js"></script>
     <script type="application/javascript" src="assets/js/visualize_iPerf.js"></script>
 
-    <title>iPerf Visualizer | V 0.1</title>
+    <title>iperf-visualizer</title>
 </head>
 <body>
     <header id="header">
         <img src="assets/images/iPerfVis_Logo_V02.png" id="headerLogo"/>
-        <h2>iPerf Visualizer | V 0.1</h2>
+        <h2>iperf-visualizer</h2>
+        <h6>To see captured iPerf data in a graph, please upload a json file of your iPerf3 testrun.</h6>
         <div style="clear: both;"></div>
     </header>
 
     <div class="main">
-        <img src="assets/images/iPerfVis_Logo_V02.png" id="mainLogo"/>
-        <h1>iPerf Visualizer</h1>
-        <p>To see captured iPerf data in a graph, please upload a json file of your iPerf3 testrun.</p>
 
-        <div id="fileChooserContainer" style="margin-top: 20px;">
+        <div id="fileChooserContainer">
         </div>
 
         <div id="chartsContainer"></div>
         <div style="clear: both;"></div>
+
     </div>
 </body>
 </html>
